fix: email input too long

--- a/web/assets/scss/_theme.scss
+++ b/web/assets/scss/_theme.scss
@@ -75,7 +75,7 @@ $input-border-width: 1px;
 $input-border-radius: 16px;
 $input-padding-y: 12px;
 $input-padding-x: 16px;
-$input-font-size: 16px;
+$input-font-size: 1.1rem;
 $input-line-height: 1.9; // Use unitless value for line-height
 $input-height: 56px;
 $input-focus-border-color: $primary;
